zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/zero_width_nonexhaustive_enum.zig
comptime {
    const E = enum(i0) { a, _ };
    _ = @as(E, undefined);
}

comptime {
    const E = enum(u0) { a, _ };
    _ = @as(E, undefined);
}

comptime {
    const E = enum(u0) { a, b, _ };
    _ = @as(E, undefined);
}

// error
//
// :2:15: error: non-exhaustive enum specifies every value
// :7:15: error: non-exhaustive enum specifies every value
// :12:29: error: enum tag value '1' too large for type 'u0'
